--- a/src/css/mainStyle.css
+++ b/src/css/mainStyle.css
@@ -252,6 +252,19 @@ body {
 .top-big-slider__item__btn-cont {
   margin-top: 20%;
 }
+
+.top-big-slider__bottom--2 {
+  position: absolute;
+  width: 100%;
+  height: 80px;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 25px;
+}
+
 .top-big-slider__bottom {
   height: 80px;
   width: 100%;
@@ -282,12 +295,12 @@ body {
 #slider-top {
   margin-bottom: 0;
 }
-#slider-top .slick-prev::before {
+.slick-prev::before {
   content: ">";
   color: #ffbb1a;
   font-size: 30px;
 }
-#slider-top .slick-next::before {
+.slick-next::before {
   content: "<";
   color: #ffbb1a;
   font-size: 30px;
@@ -313,9 +326,195 @@ body {
   content: "";
   opacity: 1;
 }
+.top-big-slider__bottom--2 button {
+  font-size: 1.3em;
+}
+.top-big-slider__bottom--2 .top-big-slider__item__select-cont {
+  width: 150px;
+  height: 40px;
+  /* font-size: .8em; */
+}
+.custom--search-input_cont {
+  position: relative;
+}
+.custom--search-input__bnt {
+  content: "";
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-color: black;
+  background-image: url("../img/search.svg");
+  background-repeat: no-repeat;
+  background-size: 15px;
+  background-position: center;
+  position: absolute;
+  border-radius: 100%;
+  left: 10px;
+  top: 4px;
+}
+.main__header {
+  font-size: 1.5em;
+  text-align: center;
+  font-weight: bold;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 0 100% 100% / 0 0 200% 200%;
+  border-bottom: black solid 1px;
+}
+.card--small h3 {
+  font-size: 1.1em;
+}
+
+.card--small h6 {
+  font-size: 0.9em;
+  color: #da2128;
+}
+
+.card--small img {
+  width: 40px;
+  height: 40px;
+}
+.food-baner--1 {
+  background-image: url("../img/3.png");
+}
+.food-baner--2 {
+  background-image: url("../img/4.png");
+}
+.lined-head .flex-grow-1 {
+  background-color: #090702;
+  height: 2px;
+}
+.card--medium div:last-child img {
+  width: 15px;
+  height: 15px;
+  object-fit: contain;
+}
+.card--medium > img:first-child {
+  width: 70px;
+  height: 70px;
+  margin-top: -40px;
+  transition: margin 1.5s;
+}
+.card--medium:hover > img:first-child {
+  margin-top: initial;
+}
+.card--medium:hover {
+  box-shadow: 0 3px 6px 0 #034694;
+  height: 100%;
+}
+main .slick-list.draggable {
+  padding-top: 20px;
+}
+main .slick-arrow::before {
+  color: black;
+  border: solid 1px black;
+  font-size: 18px;
+  border-radius: 100%;
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+  font-weight: bold;
+}
+.card-badge > span {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  font-size: 0.7em;
+}
 /* end specific */
 
-/* compnents */
+/* components */
+.card-badge {
+  position: absolute;
+  background-color: red;
+  border-radius: 100%;
+  width: 22.5px;
+  height: 22.5px;
+  left: 0;
+  top: 0;
+  color: white;
+  display: flex;
+  justify-content: start;
+  align-items: flex-start;
+  border-radius: 0 0 100% 0;
+}
+
+.btn-outline--dark {
+  border-radius: 25px;
+  box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.16);
+  border: solid 2px #090702;
+  background-color: #fffaff;
+}
+.card--medium_cont {
+  height: 243px;
+  position: relative;
+  flex-basis: 180px;
+  margin: 10px;
+}
+.card--medium {
+  cursor: pointer;
+  /* overflow: hidden; */
+  position: absolute;
+  bottom: 0;
+  height: 195px;
+  border-radius: 5px;
+  box-shadow: 3px 3px 6px 0 rgba(0, 0, 0, 0.16);
+  background-color: #ffffff;
+  transition: height 0.8s, box-shadow 0.8s;
+
+  flex-basis: 180px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0 5px;
+  width: 100%;
+}
+
+.lined-head {
+  display: flex;
+  font-weight: bold;
+  font-size: 1.5em;
+  align-items: center;
+  margin-top: 35px;
+}
+.food-baner {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 15px;
+  height: 176px;
+  flex-basis: 45%;
+}
+.border-bottom--cirle {
+  height: 70px;
+  border-radius: 100% 100% 0 0 / 200% 200% 0 0;
+  border-top: black solid 1px;
+}
+.card--small {
+  flex-basis: 110px;
+  height: 114px;
+  border-radius: 5px;
+  box-shadow: 3px 3px 6px 0 rgba(0, 0, 0, 0.16);
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 10px;
+}
+.custom--search-input {
+  width: 350px;
+  height: 38px;
+  border-radius: 40px;
+  -webkit-backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
+  box-shadow: 3px 6px 12px 0 rgba(0, 0, 0, 0.16);
+  background-color: #ffffff;
+}
+
 .btn--black {
   height: 40px;
   border-radius: 25px;
@@ -347,10 +546,40 @@ body {
   opacity: 0;
   visibility: hidden;
 }
+
+.text--red {
+  color: #da2128;
+}
 .text--orange {
   color: #ffbb1a;
 }
+.bg--black {
+  background: black;
+}
+
+.font-size--1 {
+  font-size: 1.1em;
+}
+
+.font-size--2 {
+  font-size: 1.2em;
+}
+
+.font-size--3 {
+  font-size: 1.3em;
+}
+.font-size--4 {
+  font-size: 1.4em;
+}
+.font-size--5 {
+  font-size: 1.5em;
+}
+
 .cursor--pointer {
   cursor: pointer;
+}
+
+.justify-content-evenly {
+  justify-content: space-evenly;
 }
 /* en utils */
