--- a/src/css/mainStyle.css
+++ b/src/css/mainStyle.css
@@ -30,7 +30,6 @@
 @font-face {
   font-family: IRANSans;
   font-display: swap;
-
   font-style: normal;
   font-weight: 300;
   src: url("../fonts/eot/IRANSansWeb_Light.eot");
@@ -174,11 +173,13 @@ a:hover {
   box-sizing: border-box;
   outline: none;
 }
-
 select {
   appearance: none;
   -webkit-appearance: none;
   border: none;
+}
+button {
+  border: none !important;
 }
 /* end reset css */
 
@@ -191,11 +192,9 @@ body {
   direction: rtl;
   background-color: #fffaff;
 }
-
 main {
   overflow-x: hidden;
 }
-
 /* end general */
 
 /* specific */
@@ -477,7 +476,7 @@ footer {
   align-items: center;
   justify-content: space-around;
   height: 85%;
-  padding-bottom: 30%;
+  padding-bottom: 3vh;
 }
 .right-menu--desktop .logo {
   width: 85px;
@@ -491,7 +490,7 @@ footer {
 .right-menu--desktop .icon {
   width: 32px;
 }
-nav > div:nth-child(2) {
+.right-menu--desktop nav > div:nth-child(2) {
   border-bottom: solid 1.5px;
   padding-bottom: 10px;
   width: 50%;
@@ -499,11 +498,162 @@ nav > div:nth-child(2) {
 }
 section > .container {
   transition: margin 0.4s;
-  marg
+}
+.center-content--small {
+  width: calc(100% - 120px) !important;
+}
+.left-cart--desktop__header .cart {
+  width: 20px;
+  height: 20px;
+}
+.left-cart--desktop__header .closee {
+  height: 25px;
+  width: 25px;
+}
+.left-cart--desktop__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 14px 20px;
+  border-bottom: solid 1px #ffbb1a;
+}
+.card--cart .closee img {
+  width: 18px;
+  height: 18px;
+}
+.card--cart .closee {
+  position: absolute;
+  top: 5px;
+  left: 9px;
+}
+.card--cart > div:nth-child(2) {
+  flex-basis: 60%;
+}
+.product-counter > div:first-child,
+.product-counter > div:last-child {
+  background-color: #ffbb1a;
+  border-radius: 100%;
+  width: 19px;
+  height: 19px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.left-cart--desktop__btn .cart {
+  width: 25px;
+  height: 25px;
+}
+.left-cart--desktop__footer {
+  width: 246px;
+  height: 40px;
+  border-radius: 40px;
+  background-color: #da2128;
+}
+.bottom-menu--mobile > nav img {
+  width: 25px;
+  object-fit: contain;
+}
+.bottom-menu--mobile > nav > div {
+  flex-basis: 20%;
+  z-index: 1;
+}
+.bottom-menu--mobile > nav > div.center .center-img {
+  background-image: url("../img/4.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  text-align: center;
+  width: 66px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bottom-menu--mobile > nav .center img {
+  width: 30px;
 }
 /* end specific */
 
 /* components */
+.bottom-menu--mobile > nav {
+  height: 100px;
+  background-color: #090702;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.bottom-menu--mobile {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  z-index: 8;
+}
+.btn--red {
+  width: 75px;
+  height: 26px;
+  border-radius: 15px;
+  background-color: #da2128;
+}
+.product-counter {
+  width: 25px;
+  height: 80px;
+  border-radius: 25px;
+  background-color: #090702;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+.card--cart {
+  position: relative;
+  border-radius: 8px;
+  width: 275px;
+  /* height: 100px; */
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+  background-color: #fffaff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 35px;
+  padding-right: 10px;
+  margin-bottom: 10px;
+}
+#center-content {
+  transition: 0.5s;
+  width: 100%;
+  float: left;
+}
+.left-cart--desktop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 325px;
+  background-color: #090702;
+  box-shadow: -5px 3px 12px 0 #68645b;
+  /* z-index: 8; */
+  transition: 0.4s;
+}
+.left-cart--desktop__btn {
+  width: 107px;
+  height: 92px;
+  box-shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.16);
+  background-color: #090702;
+  border-radius: 0 5px 5px 0;
+  position: absolute;
+  left: 325px;
+  top: calc((100% - 92px) / 2);
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  justify-content: space-evenly;
+  cursor: pointer;
+  opacity: 1;
+
+  /* transition: opacity linear 0s, transform linear .4s; */
+  transition: transform 0.3s 0.07s ease-in, width 0.3s ease-in;
+}
 .right-menu--desktop {
   position: fixed;
   right: 0;
@@ -511,6 +661,8 @@ section > .container {
   height: 100vh;
   width: 120px;
   background-color: #090702;
+  box-shadow: 10px 6px 6px 0 rgba(0, 0, 0, 0.16);
+  z-index: 8;
 }
 .section--bg {
   background-image: url("../img/supermarket.jpg");
@@ -652,17 +804,48 @@ section > .container {
   background-color: black;
 }
 
+.bottom-cart--mobile {
+  bottom: 0;
+  top: unset;
+  width: 100% ;
+  height: 80vh;
+  z-index: 9;
+  box-shadow: 0 -4px 6px 0 rgba(104, 100, 91, 0.8);
+  border-radius: 10px 10px 0 0;
+}
 /* end components */
 
 /* utils */
+.hide--long {
+  transition: 0.5s;
+  opacity: 0;
+  visibility: hidden;
+}
 .hide {
   transition: 0.15s;
   opacity: 0;
   visibility: hidden;
 }
+.removedY {
+  transform: translateY(100%);
+  /* transition: 0.2s; */
+}
 .removedX {
   transform: translateX(100%);
   transition: 0.2s;
+}
+.removedX--n {
+  transform: translateX(-100%);
+  transition: transform 0.2s, opacity 1s;
+  /* opacity: 0; */
+}
+.removedX--n2 {
+  transform: translateX(-100%);
+  width: 0;
+  /* transition: opacity ease-in .4s , transform linear .4s;  transition-property: opacity; */
+
+  /* transition:transform 2s; */
+  /* transition-delay: opacity 10s; */
 }
 .transition {
   transition: 0.4s;
@@ -703,4 +886,46 @@ section > .container {
 .justify-content-evenly {
   justify-content: space-evenly;
 }
-/* en utils */
+
+.triangle-up {
+  width: 0;
+  height: 0;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  border-bottom: 15px solid #090702;
+}
+/* end utils */
+
+
+.triangle, .triangle:before, .triangle:after { width: 4em; height: 4em; }
+.triangle {
+	overflow: hidden;
+	position: relative;
+	margin: 7em auto 0;
+	border-radius: 20%;
+	transform: translateY(50%) rotate(30deg) skewY(30deg) scaleX(.866);
+	cursor: pointer;
+	pointer-events: none;
+} 
+.triangle:before, .triangle:after {
+  position: absolute;
+  background: #090702;
+	pointer-events: auto;
+	content: '';
+}
+.triangle:before {
+	border-radius: 20% 20% 20% 53%;
+	transform: scaleX(1.155) skewY(-30deg) rotate(-30deg) translateY(-42.3%) 
+			skewX(30deg) scaleY(.866) translateX(-24%);
+}
+.triangle:after {
+	border-radius: 20% 20% 53% 20%;
+	transform: scaleX(1.155) skewY(-30deg) rotate(-30deg) translateY(-42.3%) 
+			skewX(-30deg) scaleY(.866) translateX(24%);
+}
+
+/* .triangle:hover { overflow: visible; }
+.triangle:hover:before, .triangle:hover:after { background: none; }
+.triangle:hover, .triangle:hover:before, .triangle:hover:after {
+	border: dashed 1px;
+} */
