--- a/src/css/mainStyle.css
+++ b/src/css/mainStyle.css
@@ -550,7 +550,7 @@ section > .container {
   background-color: #da2128;
 }
 .bottom-menu--mobile > nav img {
-  width: 25px;
+  width: 23px;
   object-fit: contain;
 }
 .bottom-menu--mobile > nav > div {
@@ -807,7 +807,7 @@ section > .container {
 .bottom-cart--mobile {
   bottom: 0;
   top: unset;
-  width: 100% ;
+  width: 100%;
   height: 80vh;
   z-index: 9;
   box-shadow: 0 -4px 6px 0 rgba(104, 100, 91, 0.8);
@@ -896,32 +896,37 @@ section > .container {
 }
 /* end utils */
 
-
-.triangle, .triangle:before, .triangle:after { width: 4em; height: 4em; }
+.triangle,
+.triangle:before,
+.triangle:after {
+  width: 4em;
+  height: 4em;
+}
 .triangle {
-	overflow: hidden;
-	position: relative;
-	margin: 7em auto 0;
-	border-radius: 20%;
-	transform: translateY(50%) rotate(30deg) skewY(30deg) scaleX(.866);
-	cursor: pointer;
-	pointer-events: none;
-} 
-.triangle:before, .triangle:after {
+  overflow: hidden;
+  position: relative;
+  margin: 7em auto 0;
+  border-radius: 20%;
+  transform: translateY(50%) rotate(30deg) skewY(30deg) scaleX(0.866);
+  cursor: pointer;
+  pointer-events: none;
+}
+.triangle:before,
+.triangle:after {
   position: absolute;
   background: #090702;
-	pointer-events: auto;
-	content: '';
+  pointer-events: auto;
+  content: "";
 }
 .triangle:before {
-	border-radius: 20% 20% 20% 53%;
-	transform: scaleX(1.155) skewY(-30deg) rotate(-30deg) translateY(-42.3%) 
-			skewX(30deg) scaleY(.866) translateX(-24%);
+  border-radius: 20% 20% 20% 53%;
+  transform: scaleX(1.155) skewY(-30deg) rotate(-30deg) translateY(-42.3%)
+    skewX(30deg) scaleY(0.866) translateX(-24%);
 }
 .triangle:after {
-	border-radius: 20% 20% 53% 20%;
-	transform: scaleX(1.155) skewY(-30deg) rotate(-30deg) translateY(-42.3%) 
-			skewX(-30deg) scaleY(.866) translateX(24%);
+  border-radius: 20% 20% 53% 20%;
+  transform: scaleX(1.155) skewY(-30deg) rotate(-30deg) translateY(-42.3%)
+    skewX(-30deg) scaleY(0.866) translateX(24%);
 }
 
 /* .triangle:hover { overflow: visible; }
