--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,6 +1,5 @@
 /* lg */
 /* max */
-
 @media only screen and (max-width: 992px) {
   body {
     font-size: 12px;
@@ -66,5 +65,12 @@
   }
   .top-big-slider__item__inner h1 {
     font-size: 2em;
+  }
+}
+
+/* min */
+@media only screen and (min-width: 992px) {
+  .w-lg--80 {
+    width: 80%;
   }
 }
