--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -66,6 +66,20 @@
   .top-big-slider__item__inner h1 {
     font-size: 2em;
   }
+  .main__header {
+    border-radius: 0 0 100% 100% / 0 0 200% 200%;
+    border: black solid 3px;
+    border-top: none;
+    background-image: none;
+  height: 70px;
+
+  }
+  .border-bottom--cirle {
+    height: 70px;
+    border-radius: 100% 100% 0 0 / 200% 200% 0 0;
+    border: black solid 3px;
+    border-bottom: none;
+  }
 }
 
 /* min */
